[gd_scene load_steps=5 format=3 uid="uid://d3u0f2ocmgp8"]

[ext_resource type="Texture2D" uid="uid://k455he7sv15i" path="res://Sprites/Locations/Room_2/Card_code.png" id="1_f3vgo"]
[ext_resource type="Script" path="res://Scene/Items/card_code_item.gd" id="2_2jqdc"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_23ew0"]
size = Vector2(147, 174)

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_5m4j3"]
load_path = "res://.godot/imported/circle_light.png-ea7be3356199a949fe50979ab7f1d4f4.ctex"

[node name="Card_code_item" type="Sprite2D" groups=["Card_code"]]
texture = ExtResource("1_f3vgo")
script = ExtResource("2_2jqdc")

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 8
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(94.5, 131)
shape = SubResource("RectangleShape2D_23ew0")
debug_color = Color(0.572549, 0.529412, 0.462745, 0.419608)

[node name="CircleLight" type="Sprite2D" parent="."]
unique_name_in_owner = true
visible = false
modulate = Color(0.937255, 0.603922, 0, 0.207843)
show_behind_parent = true
scale = Vector2(0.05, 0.05)
texture = SubResource("CompressedTexture2D_5m4j3")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(-3, 2)
rotation = -0.0649136
skew = 0.387463

[node name="Green_Light" type="ColorRect" parent="Sprite2D"]
offset_left = -5.02913
offset_top = -13.9189
offset_right = 8.97087
offset_bottom = 2.08106
rotation = -0.320367
color = Color(0, 0.592157, 0, 1)

[node name="Red_Light" type="ColorRect" parent="Sprite2D"]
unique_name_in_owner = true
offset_left = -5.02913
offset_top = -13.9189
offset_right = 8.97087
offset_bottom = 2.08106
rotation = -0.320367
color = Color(0.552941, 0.0352941, 0, 1)

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
